assets/css/lunchbox.css
.lunchbox_folder{
    background-image:url('../images/folder.png');
    background-repeat:no-repeat;
    height:24px;
    width:24px;
}
.lunchbox_page {
    background-image:url('../images/page.png');
    background-repeat:no-repeat;
    height:24px;
    width:24px;
}
.lunchbox_breadcrumb {
    font-weight: bold;    
}
.lunchbox_breadcrumb:hover {
    color: #6d9524;
    cursor: pointer;
}
#lunchbox_breadcrumbs {
    height: 20px;
}

/* Custom Icon for our class_key */
.icon-lunchbox .x-tree-node-icon {
    background-image: url(../images/lunchbox-icon.png) !important;
}

#lunchbox_breadcrumbs {
    padding: 2px 0 0 5px;
    color: #9e9e9e;
}

